Improve code [convert to Kotlin]